objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountAliases__c</fullName>
        <description>Other names the account/client may go by</description>
        <inlineHelpText>Other names the account/client may go by.  To add to this list, please create a task and assign to Client Information Services.</inlineHelpText>
        <label>Account Aliases</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Account_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager Lookup</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Assigned user must be part of the Account Management Team.</errorMessage>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Director of Account Management,Senior Account Manager, Account Manager, CIS</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM TEAM (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>ANGIE NAKASONE</fullName>
                </value>
                <value>
                    <fullName>ANGIE NAKASONE (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>BRITTANY QUIGG</fullName>
                </value>
                <value>
                    <fullName>BRITTANY QUIGG (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>DARREN EBISU</fullName>
                </value>
                <value>
                    <fullName>DARREN EBISU (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>DAVID MCKALE</fullName>
                </value>
                <value>
                    <fullName>DEB GALVEZ</fullName>
                </value>
                <value>
                    <fullName>DEB GALVEZ (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>DIANNA MCGRAW</fullName>
                </value>
                <value>
                    <fullName>DIANNA MCGRAW (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>DONNA JONES</fullName>
                </value>
                <value>
                    <fullName>HANNAH BRANDON</fullName>
                </value>
                <value>
                    <fullName>HANNAH BRANDON (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>HARRY BYERLY</fullName>
                </value>
                <value>
                    <fullName>HARRY BYERLY (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>HOOKELA TEAM</fullName>
                </value>
                <value>
                    <fullName>HOOMAU TEAM</fullName>
                </value>
                <value>
                    <fullName>JOHN DEMARCO</fullName>
                </value>
                <value>
                    <fullName>JOHN DEMARCO (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>JORDAN WONG</fullName>
                </value>
                <value>
                    <fullName>JORDAN WONG (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>KEVIN YAMADA</fullName>
                </value>
                <value>
                    <fullName>KEVIN YAMADA (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>KOKUA TEAM</fullName>
                </value>
                <value>
                    <fullName>LARRY HUBBELL</fullName>
                </value>
                <value>
                    <fullName>LARRY HUBBELL (ESCALATION ONLY)</fullName>
                </value>
                <value>
                    <fullName>LOKAHI TEAM</fullName>
                </value>
                <value>
                    <fullName>MARK SHIMAN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <formula>IF( Days_Since_Last_Activity__c &lt;1, IMAGE("/img/samples/light_green.gif", "NO ACTIVITIES"), IF( AND (Days_Since_Last_Activity__c &gt;1, Days_Since_Last_Activity__c&lt;31), IMAGE("/img/samples/light_red.gif","Less than 30") , IF(AND(Days_Since_Last_Activity__c&gt; 30,Days_Since_Last_Activity__c&lt; 61),IMAGE("/img/samples/light_yellow.gif","30 to 60"),IF( AND(Days_Since_Last_Activity__c&gt; 60,Days_Since_Last_Activity__c&lt; 91), IMAGE("/img/samples/light_green.gif","60 to 90") , IMAGE("/img/samples/light_green.gif","More than 90")))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Montiros Days since last activity on Account
1-31 days = RED
31-60 = YELLOW
61-90 and over = GREEN
No activity = GREEN</inlineHelpText>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aligned_HC_Pricing_Accounts__c</fullName>
        <label>Aligned HC Pricing Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Already_Referred_Prior_to_07_01__c</fullName>
        <label>Already Referred Prior to 07/01</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Tracking_System__c</fullName>
        <label>Applicant Tracking System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Efficient Apply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Application."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Application."</inlineHelpText>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <formula>IF(Special_Considerations__c="PFK-HOT", 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At Risk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attended_CL_HR_Training_in_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if attended in the last 12 months.</description>
        <label>Attended CL HR Training in Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Background_Check__c</fullName>
        <label>Background Check</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Coordinator__c</fullName>
        <label>Benefit Coordinator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BenefitsAdministrationException__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefits Administration Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefits_Specialist__c</fullName>
        <label>Benefits Specialist</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Template_Code__c</fullName>
        <label>Bill Template Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Template__c</fullName>
        <label>Billing Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Eligible__c</fullName>
        <label>COBRA Eligible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Y_or_N</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CXI_Activity_Date__c</fullName>
        <label>CXI Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CXI_Touched__c</fullName>
        <description>AND(
(
12*(YEAR(TODAY()) - YEAR(NPS_Survey_Month_Date__c)) + 
(MONTH(TODAY()) - MONTH(NPS_Survey_Month_Date__c))
) &lt;=3,
(
12*(YEAR(TODAY()) - YEAR(NPS_Survey_Month_Date__c)) + 
(MONTH(TODAY()) - MONTH(NPS_Survey_Month_Date__c))
) &lt;=2
)</description>
        <formula>OR(
AND(
NOT(ISBLANK( CXI_Activity_Date__c )),
YEAR(CXI_Activity_Date__c) = YEAR(TODAY()),
OR(
MONTH(CXI_Activity_Date__c ) = MONTH(TODAY()) + 1,
MONTH(CXI_Activity_Date__c ) = MONTH(TODAY()) + 2)),

AND(
YEAR(CXI_Activity_Date__c) = YEAR(TODAY()) + 1,
OR(
MONTH(CXI_Activity_Date__c) = 1 &amp;&amp; (MONTH(TODAY()) = 11 || MONTH(TODAY()) = 12),
MONTH(CXI_Activity_Date__c) = 2 &amp;&amp; MONTH(TODAY()) = 12
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Next 2 months CXI Touched</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientSpace_Sales_ID__c</fullName>
        <description>This number is autogenerated in ClientSpace when a new workspace is created. Implementation team is manually inputting this ID until a automated process is devised by IT. This needs to be a unique number.  Added on 06/15/16.</description>
        <inlineHelpText>This number is autogenerated in ClientSpace when a new workspace is created. Implementation team is manually inputting this ID until a automated process is devised by IT. This needs to be a unique number.  Added on 06/15/16.</inlineHelpText>
        <label>ClientSpace Sales ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Fiscal_Year_Start__c</fullName>
        <label>Client Fiscal Year Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - January</fullName>
                </value>
                <value>
                    <fullName>2 - February</fullName>
                </value>
                <value>
                    <fullName>3 - March</fullName>
                </value>
                <value>
                    <fullName>4 - April</fullName>
                </value>
                <value>
                    <fullName>5 - May</fullName>
                </value>
                <value>
                    <fullName>6 - June</fullName>
                </value>
                <value>
                    <fullName>7 - July</fullName>
                </value>
                <value>
                    <fullName>8 - August</fullName>
                </value>
                <value>
                    <fullName>9 - September</fullName>
                </value>
                <value>
                    <fullName>10 - October</fullName>
                </value>
                <value>
                    <fullName>11 - November</fullName>
                </value>
                <value>
                    <fullName>12 - December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_ID_Text__c</fullName>
        <label>Client ID Text</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Client ID from HRP</inlineHelpText>
        <label>Client ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Legal_Name__c</fullName>
        <label>Client Legal Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Officers_Owners__c</fullName>
        <description>This is the list of Officer/Owner names needed for reporting to our banking partner.</description>
        <inlineHelpText>This is the list of Officer/Owner names needed for reporting to our banking partner.</inlineHelpText>
        <label>Client Officers/Owners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_Relations_Account_Notes__c</fullName>
        <label>Client Relations Account Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Selection_Received__c</fullName>
        <label>Client Selection Received?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Rollover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Space_GUID__c</fullName>
        <description>unique identifier (and external ID from Client Space)</description>
        <externalId>true</externalId>
        <inlineHelpText>viewable by Sysadmins only (via FLS)</inlineHelpText>
        <label>Client Space GUID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Close Date."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Close Date."</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication_Exceptions_General__c</fullName>
        <label>Communication Exceptions - General</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Exceptions_HR_Training__c</fullName>
        <label>Communication Exceptions - HR Training</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Exceptions_Health_CareOE__c</fullName>
        <label>Communication Exceptions - Health CareOE</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Exceptions_Tax_Pkg_Dist__c</fullName>
        <label>Communication Exceptions - Tax Pkg Dist</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Exceptions_Tax_Pkg_Email__c</fullName>
        <label>Communication Exceptions - Tax Pkg Email</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_1_Email__c</fullName>
        <label>Primary Ops Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_1_Phone__c</fullName>
        <label>Primary Ops Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_1_Title__c</fullName>
        <label>Primary Ops Title</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_1__c</fullName>
        <label>Primary Ops</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2_Email__c</fullName>
        <label>Secondary Ops Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_2_Phone__c</fullName>
        <label>Secondary Ops Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_2_Title__c</fullName>
        <label>Secondary Ops Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_2__c</fullName>
        <label>Secondary Ops</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <inlineHelpText>Date the contract is expected to end.</inlineHelpText>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Remarks_Kill_Reason__c</fullName>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import).</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import).</inlineHelpText>
        <label>Contract Remarks/Kill Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal_Term__c</fullName>
        <label>Contract Renewal Term</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory_Email__c</fullName>
        <label>Contract Signatory Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory_Phone__c</fullName>
        <label>Contract Signatory Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contract_Signatory__c</fullName>
        <label>Contract Signatory</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporation_Type_Description__c</fullName>
        <label>Business Entity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company (LLC)</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership (LP)</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership (LLP)</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Limited Partnership (LLLP)</fullName>
                </value>
                <value>
                    <fullName>C-Corporation</fullName>
                </value>
                <value>
                    <fullName>S-Corporation</fullName>
                </value>
                <value>
                    <fullName>Non-Profit Corporation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center_Description__c</fullName>
        <label>Cost Center Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HONOLULU - OAHU</fullName>
                </value>
                <value>
                    <fullName>KAILUA-KONA - HAWAII</fullName>
                </value>
                <value>
                    <fullName>HILO - HAWAII</fullName>
                </value>
                <value>
                    <fullName>KAHULUI - MAUI</fullName>
                </value>
                <value>
                    <fullName>KAPAA - KAUAI</fullName>
                </value>
                <value>
                    <fullName>MOLOKAI</fullName>
                </value>
                <value>
                    <fullName>MAINLAND</fullName>
                </value>
                <value>
                    <fullName>LANAI</fullName>
                </value>
                <value>
                    <fullName>HAWAII</fullName>
                </value>
                <value>
                    <fullName>CALIFORNIA</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <description>HK Cost Center Key: 
1 = HONOLULU – OAHU 
2 = KAILUA-KONA – HAWAII 
21 = HILO – HAWAII 
3 = KAHULUI – MAUI 
4 = KAPAA – KAUAI 
5 = MOLOKAI 
51 = MAINLAND 
6 = LANAI</description>
        <label>Cost Center</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_1_Renewal_Date__c</fullName>
        <description>Organization's current benefits carrier 1 renewal date. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current benefits carrier 1 renewal date. QMI info used during prospecting potential client Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Benefits Carrier 1 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_1__c</fullName>
        <description>Organization's current benefits carrier. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current benefits carrier. QMI info used during prospecting potential client.</inlineHelpText>
        <label>Current Benefits Carrier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_2_Renewal_Date__c</fullName>
        <description>Organization's current benefits carrier 2 renewal date. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current benefits carrier 2 renewal date. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Benefits Carrier 2 Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Benefits_Carrier_2__c</fullName>
        <description>Organization's current benefits carrier 2.QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current benefits carrier 2.QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Benefits Carrier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Dental_Carrier__c</fullName>
        <description>Organization's Dental Carrier. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's Dental Carrier. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Dental Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Payroll_Method__c</fullName>
        <description>Organization's current payroll method. QMI info used during prospecting potential client.. Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current payroll method. QMI info used during prospecting potential client. Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Payroll Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In House</fullName>
                </value>
                <value>
                    <fullName>Payroll Company</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Payroll_Provider__c</fullName>
        <description>Organization's current payroll provider. QMI info used during prospecting potential client. . Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's current payroll provider. QMI info used during prospecting potential client.. Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current Payroll Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administaff</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Advantech</fullName>
                </value>
                <value>
                    <fullName>AlohaBusinessServices</fullName>
                </value>
                <value>
                    <fullName>Alphastaff</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>CoAdvantage</fullName>
                </value>
                <value>
                    <fullName>ELS</fullName>
                </value>
                <value>
                    <fullName>Employment Experts</fullName>
                </value>
                <value>
                    <fullName>FrankCrum</fullName>
                </value>
                <value>
                    <fullName>Gevity</fullName>
                </value>
                <value>
                    <fullName>HawaiiWorkplace</fullName>
                </value>
                <value>
                    <fullName>Heartland</fullName>
                </value>
                <value>
                    <fullName>HiHR</fullName>
                </value>
                <value>
                    <fullName>HRAH</fullName>
                </value>
                <value>
                    <fullName>HRBenefix</fullName>
                </value>
                <value>
                    <fullName>InSource</fullName>
                </value>
                <value>
                    <fullName>IntuitPayroll</fullName>
                </value>
                <value>
                    <fullName>MBA</fullName>
                </value>
                <value>
                    <fullName>NELCO</fullName>
                </value>
                <value>
                    <fullName>Oasis</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PAU</fullName>
                </value>
                <value>
                    <fullName>PaySmart</fullName>
                </value>
                <value>
                    <fullName>Progressive</fullName>
                </value>
                <value>
                    <fullName>Southeastern</fullName>
                </value>
                <value>
                    <fullName>Talent HR Solutions</fullName>
                </value>
                <value>
                    <fullName>TNT Payroll Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Quarter_AM_F2F__c</fullName>
        <description>~~~~~~~~~~~~~~~~Current Quarter~~~~~~~~~~~~~~~
AND(
CEILING( MONTH( Last_F2F_Meeting_Date__c ) / 3 ) = CEILING( MONTH( TODAY() ) / 3 ),
YEAR( Last_F2F_Meeting_Date__c ) = YEAR( TODAY() )
)
~~~~~~~~~~~~~~~~~Last Quarter~~~~~~~~~~~~~~~~~
OR(
	AND(
	YEAR( Last_F2F_Meeting_Date__c) = YEAR(TODAY()),
	(CEILING(MONTH( TODAY() ) / 3 ) -
	CEILING(MONTH( Last_F2F_Meeting_Date__c ) / 3 )) = 1), 
	AND(
	YEAR( Last_F2F_Meeting_Date__c ) = (YEAR(TODAY()) - 1),
	CEILING(MONTH( TODAY() ) / 3 ) = 1,
	CEILING(MONTH( Last_F2F_Meeting_Date__c ) / 3 ) = 4)
)</description>
        <formula>AND( 
CEILING( MONTH( Last_F2F_Meeting_Date__c ) / 3 ) = CEILING( MONTH( TODAY() ) / 3 ), 
YEAR( Last_F2F_Meeting_Date__c ) = YEAR( TODAY() ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Quarter AM F2F</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_WC_Carrier_Renewal_Date__c</fullName>
        <description>Organization's Current WC Carrier Renewal Date. QMI info used during prospecting potential client. . Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's Current WC Carrier Renewal Date. QMI info used during prospecting potential client. . Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current WC Carrier Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_WC_Carrier__c</fullName>
        <description>Organization's Current WC Carrier. QMI info used during prospecting potential client. . Should be POPULATED in Opportunity (originally CS Import)</description>
        <inlineHelpText>Organization's Current WC Carrier. QMI info used during prospecting potential client. . Should be POPULATED in Opportunity (originally CS Import)</inlineHelpText>
        <label>Current WC Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Referral__c</fullName>
        <label>Date of Last Referral</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>-(LastActivityDate - TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_between_conversion_to_1st_activity__c</fullName>
        <formula>First_Activity__c - Lead_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days between conversion to 1st activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Instructions_for_EE_Packets__c</fullName>
        <label>Delivery Instructions for EE Packets</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deposit_on_FIle__c</fullName>
        <description>Deposit on file as of end of previous month</description>
        <label>Deposit on File</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description_of_Business_Long_Text__c</fullName>
        <label>Description of Business (Long Text)</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Business__c</fullName>
        <label>Description of Business</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Operations__c</fullName>
        <description>Description of Operations</description>
        <inlineHelpText>Description of Operations</inlineHelpText>
        <label>Description of Operations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_Not_Survey_Reason__c</fullName>
        <label>Do Not Survey Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Requested Removal</fullName>
                </value>
                <value>
                    <fullName>JS5 Union Account</fullName>
                </value>
                <value>
                    <fullName>Out of State Account</fullName>
                </value>
                <value>
                    <fullName>Special Owner/Exec Only Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Drug_Testing__c</fullName>
        <label>Drug Testing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Call__c</fullName>
        <label>EE Call</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EE_Packets_Mailed__c</fullName>
        <label>EE Packets Mailed?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EE_Pkt_Mail_Date__c</fullName>
        <label>EE Pkt Mail Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPLI_Carve_Out__c</fullName>
        <label>EPLI Carve Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVerify__c</fullName>
        <label>E-Verify</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Electronic_Onboarding_System__c</fullName>
        <label>Electronic Onboarding System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Efficient Hire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer_Id__c</fullName>
        <label>Employer Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>